--- a/src/app/dashboard/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard/dashboard.component.html
@@ -9,10 +9,12 @@
 </div>
 </div>
 <div class="nav">
+    <div><button>Log Out</button></div>
     
-    <div class="userIcon"><a href=""><img src="/assets/images/icons8-user-50.png" alt=""></a></div>
+    <div class="userIcon"><a href=""><img src="/assets/images/icons8-user-50.png" alt=""></a>
+
+    </div>
     <div class="userName">Welcome</div>
-</div>
     </div>
     <hr>
     <div class="dashboard" [style.width]="active ? '100%' : '80%'">
