--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 <!-- <app-card></app-card> -->
 <!-- <app-dashboard></app-dashboard> -->
 <!-- <app-create-client></app-create-client> -->
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
+<app-client-details></app-client-details>
+<!-- <app-home></app-home> -->
