--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div class="container">
+  <div class="subContainer">
+    <div class="image"><img src="/assets/images/icons8-user-50.png" alt=""></div>
+    <div class="head"><h3>Devendra Singh</h3></div>
+    <div class="btn"><button>Log Out</button></div>
+  </div>
+</div>
